# Learning

CMakeAndGTestImplementation/: CMakeLists.txt  testgtest.cpp
CMakeAndGTestImplementation/gtest/: CMakeLists.txt
LearningWPF/: LearningWPF.sln
LearningWPF/LearningWPF/: App.xaml  App.xaml.cs  LearningWPF.csproj  RelayCommand.cs
LearningWPF/LearningWPF/Enums/: MotorStatus.cs  RotationalDirection.cs
LearningWPF/LearningWPF/Models/: Motor.cs  ProtoModel.cs
LearningWPF/LearningWPF/Properties/: AssemblyInfo.cs
LearningWPF/LearningWPF/ViewModels/: MotorViewModel.cs
LearningWPF/LearningWPF/Views/: MainWindow.xaml  MainWindow.xaml.cs
LearningWPF/LearningWPF/Views/ViewResources/: MainWindowResources.xaml
PythonDataSci/: DataModels.py  DataParser.py  testScript.py
Win32Tutorial/: Win32Tutorial.sln
Win32Tutorial/Debug/: Win32Tutorial.Core.ilk
Win32Tutorial/Win32Tutorial.Core/: HelloWorld.c  HelloWorld2.c  Win32Tutorial.Core.vcxproj
Win32Tutorial/Win32Tutorial.Core/Debug/: vc141.idb
Win32Tutorial/Win32Tutorial.Core/Debug/Win32Tut.9AA87D7F.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Win32Tutorial.Core.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
dotnetWebAPI/TodoApi/Properties/: launchSettings.json
dotnetWebApp/RazorPagesMovie/: MvcMovie.db  RazorPagesMovie.csproj  Startup.cs
dotnetWebApp/RazorPagesMovie/Migrations/: 20200909010953_InitialCreate.Designer.cs
dotnetWebApp/RazorPagesMovie/Properties/: launchSettings.json
